--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <!-- Text box to submit word of choice -->
             <form class="text-input">
                 <label for="word">
-                    Word:
+                    Word teste:
                     <input type="text" name="word-chosen">
                     <input type="submit" value="Submit" class="submit-button">
                 </label>
